--- a/pom.xml
+++ b/pom.xml
@@ -4,37 +4,44 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ashlux</groupId>
-    <artifactId>maven-oc4j-plugin</artifactId>
+    <artifactId>oc4j-maven-plugin</artifactId>
     <version>0.1-SNAPSHOT</version>
+    <name>OC4J Maven Plugin</name>
     <packaging>maven-plugin</packaging>
+    <url>http://www.ashlux.com/oc4j-maven-plugin</url>
+
+    <scm>
+        <url>scm:git:git://github.com/ashlux/maven-oc4j-plugin.git</url>
+    </scm>
 
     <developers>
         <developer>
             <id>ashlux</id>
             <name>Ash Lux</name>
             <email>ashlux@gmail.com</email>
+            <url>http://www.ashlux.com/</url>
             <roles>
                 <role>Maintainer</role>
             </roles>
-            <timezone>CDT</timezone>
+            <timezone>-5</timezone>
         </developer>
     </developers>
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>com.ashlux</groupId>
-                <artifactId>maven-oc4j-plugin</artifactId>
-                <version>0.1-SNAPSHOT</version>
-                <configuration>
-                    <j2eeHome>/home/ashlux/oc4j/j2ee/home</j2eeHome>
-                    <username>oc4jadmin</username>
-                    <password>password</password>
-                    <earDirectory>/home/ashlux/dev/head/arinc/deploy</earDirectory>
-                    <earFile>arinc.ear</earFile>
-                    <deploymentName>arinc</deploymentName>
-                </configuration>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>com.ashlux</groupId>-->
+                <!--<artifactId>oc4j-maven-plugin</artifactId>-->
+                <!--<version>0.1-SNAPSHOT</version>-->
+                <!--<configuration>-->
+                    <!--<j2eeHome>/home/ashlux/oc4j/j2ee/home</j2eeHome>-->
+                    <!--<username>oc4jadmin</username>-->
+                    <!--<password>password</password>-->
+                    <!--<earDirectory>/home/ashlux/dev/head/arinc/deploy</earDirectory>-->
+                    <!--<earFile>arinc.ear</earFile>-->
+                    <!--<applicationName>arinc</applicationName>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -43,9 +50,57 @@
                     <target>1.5</target>
                 </configuration>
             </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-plugin-plugin</artifactId>
+              <version>2.4.3</version>
+            </plugin>
         </plugins>
     </build>
 
+    <profiles>
+        <profile>
+            <id>reporting</id>
+            <reporting>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-plugin-plugin</artifactId>
+                        <version>2.4.3</version>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-pmd-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-project-info-reports-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>findbugs-maven-plugin</artifactId>
+                        <version>1.2</version>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>emma-maven-plugin</artifactId>
+                        <version>1.0-alpha-1</version>
+                        <inherited>true</inherited>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jxr-plugin</artifactId>
+                        <version>2.1</version>
+                    </plugin>
+                </plugins>
+            </reporting>
+        </profile>
+    </profiles>
+    
     <dependencies>
         <dependency>
             <groupId>org.testng</groupId>
@@ -59,12 +114,6 @@
             <artifactId>easymock</artifactId>
             <version>2.4</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.intellij</groupId>
-            <artifactId>annotations</artifactId>
-            <version>7.0.3</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
