Don't increment release verison just yet...

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.ashlux</groupId>
     <artifactId>oc4j-maven-plugin</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.1-SNAPSHOT</version>
     <name>OC4J Maven Plugin</name>
     <packaging>maven-plugin</packaging>
     <url>http://www.ashlux.com/oc4j-maven-plugin</url>
@@ -141,5 +141,12 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
+
+    <distributionManagement>
+      <repository>
+      <id>ashlux-ftp-repository</id>
+      <url>ftp://www.ashlux.com/maven2/repo</url>
+      </repository>
+    </distributionManagement>
 
 </project>
