--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">  
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">  
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -76,6 +77,11 @@
                         <artifactId>maven-scm-provider-gitexe</artifactId>
                         <version>1.1</version>
                     </dependency>
+                    <dependency>
+                        <groupId>org.codehaus.plexus</groupId>
+                        <artifactId>plexus-utils</artifactId>
+                        <version>1.5.8</version>
+                    </dependency>
                 </dependencies>
             </plugin>
             <plugin>
@@ -87,6 +93,11 @@
                         <groupId>org.apache.maven.scm</groupId>
                         <artifactId>maven-scm-provider-git-commons</artifactId>
                         <version>1.1</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.codehaus.plexus</groupId>
+                        <artifactId>plexus-utils</artifactId>
+                        <version>1.5.8</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -174,6 +185,13 @@
             <version>2.0</version>
             <scope>compile</scope>
         </dependency>
+        <!-- Dependency to fix release plugin with git from failing with this exception:
+             java.lang.NoClassDefFoundError: org/codehaus/plexus/util/xml/XmlStreamReader -->
+        <dependency>
+            <groupId>org.codehaus.plexus</groupId>
+            <artifactId>plexus-utils</artifactId>
+            <version>1.5.8</version>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
@@ -186,5 +204,6 @@
             <url>ftp://www.ashlux.com/www/www/maven2/snapshotRepo</url>
         </snapshotRepository>
     </distributionManagement>
-    
+
 </project>
+
